<resources>
    <string name="app_name">Networking</string>
    <string name="registration">Регистрация</string>
    <string name="authorization">Авторизация</string>
    <string name="ok">Ок</string>
    <string name="lol">Лол</string>
    <string name="kek">Кек</string>
    <string name="email"><font size="34">E-mail</font></string>
    <string name="real_email">simpleEmail@pochta.kek</string>
    <string name="first_name"><font size="34">Имя</font></string>
    <string name="last_name"><font size="34">Фамилия</font></string>
    <string name="password"><font size="34">Пароль</font></string>
    <string name="repeat_password"><font size="34">Подтверждение пароля</font></string>
    <string name="signin_question">Уже есть аккаунт?</string>
    <string name="signin">Войти</string>
    <string name="register_question">Нет аккаунта?</string>
    <string name="register">Зарегайся!</string>
    <string name="empty_fields">Следующие поля необходимо заполнить: </string>
    <string name="not_match_passwords">Пароли не совпадают!</string>
    <string name="wrong_password_length">Пароль должен быть длиннее 8 символов</string>
    <string name="user_foto">User foto</string>
    <string name="type_here">Напиши сюда…</string>
    <string name="albums">Albums</string>
    <string name="users">Users</string>
    <string name="create_post">Create post</string>
    <string name="default_font" translatable="false">sans-serif</string>
</resources>