<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lesson1.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:text="@string/lol"
        android:textColor="@color/green_3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/salmon"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="219dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:drawableEnd="@drawable/mail"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@string/real_email" />

        </LinearLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/person"
            android:hint="@string/first_name"
            android:autofillHints=""
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:autofillHints=""
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/lock"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textWebPassword"/>

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/unlock"
            android:hint="@string/repeat_password"
            android:autofillHints=""
            android:inputType="textWebPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="549dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_registration"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/registration" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_question"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                tools:ignore="onClick" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>