<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView style="@style/Title"
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/kek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView style="@style/MessageText"
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:text="@string/message"
        android:layout_marginBottom="164dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/picture"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/picture"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="182dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="389dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/real_email"
                android:drawableEnd="@drawable/mail"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/lock"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button style="@style/Button"
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/signin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_question"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onClick"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="onClick" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>